--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *secrets.nix filter=git-crypt diff=git-crypt
 *.key filter=git-crypt diff=git-crypt
+*wireguard-private filter=git-crypt diff=git-crypt
+boot/* filter=git-crypt diff=git-crypt
+
